tests/negative/typecheck/index-slice.orng
fn main() -> Int {
    let x = ('1', '2', '3')
    let y = []x
    y[1]
}